* [CSS] Fix z-index of user menu popup

--- a/css/common.css
+++ b/css/common.css
@@ -259,6 +259,7 @@ button::-moz-focus-inner
 	position: absolute;
 	top: 50px;
 	right: 0px;
+	z-index: 10;
 }
 
 
